fix: align in mobile screens

--- a/src/components/molecules/Card/index.module.scss
+++ b/src/components/molecules/Card/index.module.scss
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    min-height: 200px;
 
     img {
         width: get-vh(220px);
