--- a/src/components/templates/PageWrapper/index.module.scss
+++ b/src/components/templates/PageWrapper/index.module.scss
@@ -26,7 +26,7 @@
 
 @media (max-width: 768px) {
     .masterContent {
-        margin-top: 170px;
+        margin-top: 255px;
 
         .content {
             justify-content: space-between;
